Choc/Par.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module Choc.Par
  ( happyError
  , myLexer
  , pProgram
  ) where

import Prelude

import qualified Choc.Abs
import Choc.Lex

}

%name pProgram_internal Program
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!' { PT _ (TS _ 1) }
  '!=' { PT _ (TS _ 2) }
  '%' { PT _ (TS _ 3) }
  '&' { PT _ (TS _ 4) }
  '&&' { PT _ (TS _ 5) }
  '(' { PT _ (TS _ 6) }
  ')' { PT _ (TS _ 7) }
  '*' { PT _ (TS _ 8) }
  '+' { PT _ (TS _ 9) }
  '++' { PT _ (TS _ 10) }
  ',' { PT _ (TS _ 11) }
  '-' { PT _ (TS _ 12) }
  '--' { PT _ (TS _ 13) }
  '/' { PT _ (TS _ 14) }
  ';' { PT _ (TS _ 15) }
  '<' { PT _ (TS _ 16) }
  '<=' { PT _ (TS _ 17) }
  '=' { PT _ (TS _ 18) }
  '==' { PT _ (TS _ 19) }
  '>' { PT _ (TS _ 20) }
  '>=' { PT _ (TS _ 21) }
  'boolean' { PT _ (TS _ 22) }
  'break' { PT _ (TS _ 23) }
  'continue' { PT _ (TS _ 24) }
  'else' { PT _ (TS _ 25) }
  'false' { PT _ (TS _ 26) }
  'function' { PT _ (TS _ 27) }
  'if' { PT _ (TS _ 28) }
  'int' { PT _ (TS _ 29) }
  'print' { PT _ (TS _ 30) }
  'return' { PT _ (TS _ 31) }
  'string' { PT _ (TS _ 32) }
  'true' { PT _ (TS _ 33) }
  'void' { PT _ (TS _ 34) }
  'while' { PT _ (TS _ 35) }
  '{' { PT _ (TS _ 36) }
  '||' { PT _ (TS _ 37) }
  '}' { PT _ (TS _ 38) }
  L_Ident  { PT _ (TV _) }
  L_integ  { PT _ (TI _) }
  L_quoted { PT _ (TL _) }

%%

Ident :: { (Choc.Abs.BNFC'Position, Choc.Abs.Ident) }
Ident  : L_Ident { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Ident (tokenText $1)) }

Integer :: { (Choc.Abs.BNFC'Position, Integer) }
Integer  : L_integ  { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), (read (tokenText $1)) :: Integer) }

String  :: { (Choc.Abs.BNFC'Position, String) }
String   : L_quoted { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), ((\(PT _ (TL s)) -> s) $1)) }

Program :: { (Choc.Abs.BNFC'Position, Choc.Abs.Program) }
Program : ListTopDef { (fst $1, Choc.Abs.Program (fst $1) (snd $1)) }

TopDef :: { (Choc.Abs.BNFC'Position, Choc.Abs.TopDef) }
TopDef : Type Ident '(' ListArg ')' Block { (fst $1, Choc.Abs.FnDef (fst $1) (snd $1) (snd $2) (snd $4) (snd $6)) }

ListTopDef :: { (Choc.Abs.BNFC'Position, [Choc.Abs.TopDef]) }
ListTopDef : TopDef { (fst $1, (:[]) (snd $1)) }
           | TopDef ListTopDef { (fst $1, (:) (snd $1) (snd $2)) }

Arg :: { (Choc.Abs.BNFC'Position, Choc.Abs.Arg) }
Arg : Type Ident { (fst $1, Choc.Abs.ArgNoRef (fst $1) (snd $1) (snd $2)) }
    | Type '&' Ident { (fst $1, Choc.Abs.ArgRef (fst $1) (snd $1) (snd $3)) }

ListArg :: { (Choc.Abs.BNFC'Position, [Choc.Abs.Arg]) }
ListArg : {- empty -} { (Choc.Abs.BNFC'NoPosition, []) }
        | Arg { (fst $1, (:[]) (snd $1)) }
        | Arg ',' ListArg { (fst $1, (:) (snd $1) (snd $3)) }

Block :: { (Choc.Abs.BNFC'Position, Choc.Abs.Block) }
Block : '{' ListStmt '}' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Block (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }

ListStmt :: { (Choc.Abs.BNFC'Position, [Choc.Abs.Stmt]) }
ListStmt : {- empty -} { (Choc.Abs.BNFC'NoPosition, []) }
         | Stmt ListStmt { (fst $1, (:) (snd $1) (snd $2)) }

Stmt :: { (Choc.Abs.BNFC'Position, Choc.Abs.Stmt) }
Stmt : ';' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Empty (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
     | Block { (fst $1, Choc.Abs.BStmt (fst $1) (snd $1)) }
     | Type ListItem ';' { (fst $1, Choc.Abs.Decl (fst $1) (snd $1) (snd $2)) }
     | Ident '=' Expr ';' { (fst $1, Choc.Abs.Ass (fst $1) (snd $1) (snd $3)) }
     | Ident '++' ';' { (fst $1, Choc.Abs.Incr (fst $1) (snd $1)) }
     | Ident '--' ';' { (fst $1, Choc.Abs.Decr (fst $1) (snd $1)) }
     | 'return' Expr ';' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Ret (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }
     | 'return' ';' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.VRet (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
     | 'if' '(' Expr ')' Block { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Cond (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
     | 'if' '(' Expr ')' Block 'else' Block { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.CondElse (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5) (snd $7)) }
     | 'while' '(' Expr ')' Block { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.While (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }
     | Expr ';' { (fst $1, Choc.Abs.SExp (fst $1) (snd $1)) }
     | 'break' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Break (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
     | 'continue' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Continue (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
     | 'print' '(' Expr ')' ';' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.SPrint (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1)) (snd $3)) }

Item :: { (Choc.Abs.BNFC'Position, Choc.Abs.Item) }
Item : Ident { (fst $1, Choc.Abs.NoInit (fst $1) (snd $1)) }
     | Ident '=' Expr { (fst $1, Choc.Abs.Init (fst $1) (snd $1) (snd $3)) }

ListItem :: { (Choc.Abs.BNFC'Position, [Choc.Abs.Item]) }
ListItem : Item { (fst $1, (:[]) (snd $1)) }
         | Item ',' ListItem { (fst $1, (:) (snd $1) (snd $3)) }

Type :: { (Choc.Abs.BNFC'Position, Choc.Abs.Type) }
Type : 'int' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Int (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
     | 'string' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Str (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
     | 'boolean' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Bool (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
     | 'void' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Void (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
     | 'function' '<' Type '(' ListType ')' '>' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Function (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1)) (snd $3) (snd $5)) }

ListType :: { (Choc.Abs.BNFC'Position, [Choc.Abs.Type]) }
ListType : {- empty -} { (Choc.Abs.BNFC'NoPosition, []) }
         | Type { (fst $1, (:[]) (snd $1)) }
         | Type ',' ListType { (fst $1, (:) (snd $1) (snd $3)) }

Expr6 :: { (Choc.Abs.BNFC'Position, Choc.Abs.Expr) }
Expr6 : Ident { (fst $1, Choc.Abs.EVar (fst $1) (snd $1)) }
      | Integer { (fst $1, Choc.Abs.ELitInt (fst $1) (snd $1)) }
      | 'true' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.ELitTrue (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
      | 'false' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.ELitFalse (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
      | Ident '(' ListExpr ')' { (fst $1, Choc.Abs.EApp (fst $1) (snd $1) (snd $3)) }
      | String { (fst $1, Choc.Abs.EString (fst $1) (snd $1)) }
      | '(' Expr ')' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), (snd $2)) }

Expr5 :: { (Choc.Abs.BNFC'Position, Choc.Abs.Expr) }
Expr5 : '-' Expr6 { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Neg (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }
      | '!' Expr6 { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Not (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1)) (snd $2)) }
      | Expr6 { (fst $1, (snd $1)) }

Expr4 :: { (Choc.Abs.BNFC'Position, Choc.Abs.Expr) }
Expr4 : Expr4 MulOp Expr5 { (fst $1, Choc.Abs.EMul (fst $1) (snd $1) (snd $2) (snd $3)) }
      | Expr5 { (fst $1, (snd $1)) }

Expr3 :: { (Choc.Abs.BNFC'Position, Choc.Abs.Expr) }
Expr3 : Expr3 AddOp Expr4 { (fst $1, Choc.Abs.EAdd (fst $1) (snd $1) (snd $2) (snd $3)) }
      | Expr4 { (fst $1, (snd $1)) }

Expr2 :: { (Choc.Abs.BNFC'Position, Choc.Abs.Expr) }
Expr2 : Expr2 RelOp Expr3 { (fst $1, Choc.Abs.ERel (fst $1) (snd $1) (snd $2) (snd $3)) }
      | Expr3 { (fst $1, (snd $1)) }

Expr1 :: { (Choc.Abs.BNFC'Position, Choc.Abs.Expr) }
Expr1 : Expr2 '&&' Expr1 { (fst $1, Choc.Abs.EAnd (fst $1) (snd $1) (snd $3)) }
      | Expr2 { (fst $1, (snd $1)) }

Expr :: { (Choc.Abs.BNFC'Position, Choc.Abs.Expr) }
Expr : Expr1 '||' Expr { (fst $1, Choc.Abs.EOr (fst $1) (snd $1) (snd $3)) }
     | Expr1 { (fst $1, (snd $1)) }

ListExpr :: { (Choc.Abs.BNFC'Position, [Choc.Abs.Expr]) }
ListExpr : {- empty -} { (Choc.Abs.BNFC'NoPosition, []) }
         | Expr { (fst $1, (:[]) (snd $1)) }
         | Expr ',' ListExpr { (fst $1, (:) (snd $1) (snd $3)) }

AddOp :: { (Choc.Abs.BNFC'Position, Choc.Abs.AddOp) }
AddOp : '+' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Plus (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
      | '-' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Minus (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }

MulOp :: { (Choc.Abs.BNFC'Position, Choc.Abs.MulOp) }
MulOp : '*' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Times (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
      | '/' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Div (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
      | '%' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.Mod (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }

RelOp :: { (Choc.Abs.BNFC'Position, Choc.Abs.RelOp) }
RelOp : '<' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.LTH (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
      | '<=' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.LE (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
      | '>' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.GTH (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
      | '>=' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.GE (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
      | '==' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.EQU (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
      | '!=' { (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1), Choc.Abs.NE (uncurry Choc.Abs.BNFC'Position (tokenLineCol $1))) }
{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

-- Entrypoints

pProgram :: [Token] -> Err Choc.Abs.Program
pProgram = fmap snd . pProgram_internal
}
